--- a/templates/farms/crop_cycle_list.html
+++ b/templates/farms/crop_cycle_list.html
@@ -17,6 +17,9 @@
             </nav>
         </div>
         <div>
+            <a href="{% url 'farms:crop_cycle_create' %}" class="btn btn-success me-2">
+                <i class="material-icons small align-middle">add_circle_outline</i> Create Crop Cycle
+            </a>
             <a href="{% url 'farms:crop_list' %}" class="btn btn-outline-success">
                 <i class="material-icons small align-middle">agriculture</i> All Crops
             </a>
