--- a/templates/farms/field_form.html
+++ b/templates/farms/field_form.html
@@ -3,6 +3,10 @@
 
 {% block title %}{% if form.instance.pk %}Edit Field{% else %}Create New Field{% endif %} - Gitako Farm Management{% endblock %}
 
+{% block extra_css %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+{% endblock %}
+
 {% block dashboard_content %}
 <div class="container-fluid px-4 py-4">
     <!-- Page Header -->
@@ -153,4 +157,10 @@
     {% endif %}
 
 </div>
+{% endblock %}
+
+{% block extra_js %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {% endblock %}
